# btnx

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  btnx  btnx-init-template  events
src/: Makefile.am  Makefile.in  btnx.c  btnx.h  config_parser.c  config_parser.h  device.c  device.h  revoco.c  uinput.c  uinput.h
